--- a/templates/index/checkout.html.twig
+++ b/templates/index/checkout.html.twig
@@ -3,7 +3,7 @@
 <script src="https://www.paypalobjects.com/api/checkout.js"></script>
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container-fluid">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/pepperweb.png" alt="Pepperweb" /><span>pepperweb</span></a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="{{path('index')}}img/pepperweb.png" alt="Pepperweb" /><span>pepperweb</span></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -74,7 +74,7 @@
       <div class="row purchase-container">
         <div class="col-lg-4 col-md-6">
           <div class="gigs-purchase-blocs-item text-center">
-            <img src="/img/purchase-ico-1.png" />
+            <img src="{{path('index')}}img/purchase-ico-1.png" />
             <h3>{{gigs.price|currency(app.session.get('_currency'))}}/month</h3>
             <p>250 - 3k+ followers monthly<br />
     Real, genuine followers<br />
@@ -88,7 +88,7 @@
 
         <div class="col-lg-4 col-md-6">
           <div class="gigs-purchase-blocs-item text-center">
-            <img src="/img/purchase-ico-2.png" />
+            <img src="{{path('index')}}img/purchase-ico-2.png" />
             <h3>What we require?</h3>
             <p>Your Twitter username and password<br/>
     A history of relevant tweets (recommended)<br/>
@@ -101,7 +101,7 @@
 
         <div class="col-lg-4 col-md-6">
           <div class="gigs-purchase-blocs-item text-center">
-            <img src="/img/purchase-ico-3.png" />
+            <img src="{{path('index')}}img/purchase-ico-3.png" />
             <h3>Who is service provider?</h3>
             <p>Growthstore staff will be providing this service.
             We'll work with you to integrate it into the website, and gather all the necessary information from you so that we can create the project page.</p>
@@ -123,7 +123,7 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="gigs-purchase-blocs-item text-center">
-              <img src="/img/purchase-ico-2.png" />
+              <img src="{{path('index')}}img/purchase-ico-2.png" />
               <h3>What we require?</h3>
               <p>Your Twitter username and password<br/>
       A history of relevant tweets (recommended)<br/>
