--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -6,7 +6,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container-fluid">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/pepperweb.png" alt="Pepperweb" /><span>pepperweb</span></a>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="{{path('index')}}img/pepperweb.png" alt="Pepperweb" /><span>pepperweb</span></a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -79,8 +79,8 @@
 
                 <div class="col-lg-4 col-md-6 col-sm-12 filter filter-social-media">
                   <a href="/gigs/{{featured.id}}" style="display:block;text-decoration: none!important;">
-                    <div class="featured-bloc" style="background: url(/images/gigs/{{featured.backgroundImage}})">
-                        <div class="featured-icon"><img src="images/gigs/{{featured.iconImage}}" alt="" /></div>
+                    <div class="featured-bloc" style="background: url({{path('index')}}images/gigs/{{featured.backgroundImage}})">
+                        <div class="featured-icon"><img src="{{path('index')}}images/gigs/{{featured.iconImage}}" alt="" /></div>
                         <p class="featured-category">{{featured.category|upper}}</p>
                         <h3>{{featured.name|upper}}</h3>
                         <p class="featured-description">{{featured.shortdescription|raw}}</p>
@@ -147,7 +147,7 @@
 
                 <div class="col-lg-4 col-md-6 col-sm-12 filter filter-slack">
                     <div class="featured-bloc bg-slack">
-                        <div class="featured-icon"><img src="img/icon-slack.png" alt="" /></div>
+                        <div class="featured-icon"><img src="{{path('index')}}img/icon-slack.png" alt="" /></div>
                         <p class="featured-category">DEVELOPMENT</p>
                         <h3>Build a Slack Chatbot</h3>
                         <p class="featured-description">Get a completely custom Slack bot for your company. We'll ensure it's 100% tailored to your needs</p>
@@ -159,7 +159,7 @@
 
                 <div class="col-lg-4 col-md-6 col-sm-12 filter filter-video">
                     <div class="featured-bloc bg-video">
-                        <div class="featured-icon"><img src="img/icon-video.png" alt="" /></div>
+                        <div class="featured-icon"><img src="{{path('index')}}img/icon-video.png" alt="" /></div>
                         <p class="featured-category">VIDEO</p>
                         <h3>1 Minute Explainer Video</h3>
                         <p class="featured-description">We'll design, voiceover & animate a completely custom 1 minute explainer video</p>
@@ -186,11 +186,11 @@
 
             <div class="col-md-12 mx-auto d-flex justify-content-center">
                 <ul class="d-flex p-0 social-icons">
-                    <li><a href="#" target="_blank"><img src="img/footer-ico-facebook.png" alt="" /></a></li>
-                    <li><a href="#" target="_blank"><img src="img/footer-ico-twitter.png" alt="" /></a></li>
-                    <li><a href="#" target="_blank"><img src="img/footer-ico-dribble.png" alt="" /></a></li>
-                    <li><a href="#" target="_blank"><img src="img/footer-ico-vimeo.png" alt="" /></a></li>
-                    <li><a href="#" target="_blank"><img src="img/footer-ico-google.png" alt="" /></a></li>
+                    <li><a href="#" target="_blank"><img src="{{path('index')}}img/footer-ico-facebook.png" alt="" /></a></li>
+                    <li><a href="#" target="_blank"><img src="{{path('index')}}img/footer-ico-twitter.png" alt="" /></a></li>
+                    <li><a href="#" target="_blank"><img src="{{path('index')}}img/footer-ico-dribble.png" alt="" /></a></li>
+                    <li><a href="#" target="_blank"><img src="{{path('index')}}img/footer-ico-vimeo.png" alt="" /></a></li>
+                    <li><a href="#" target="_blank"><img src="{{path('index')}}img/footer-ico-google.png" alt="" /></a></li>
                 </ul>
             </div>
 
@@ -203,7 +203,7 @@
     </footer>
     <script>
         var changeCurrency = function(elem){
-          location.href =  '/setcurrency/'+elem.value
+          location.href =  '{{path('index')}}setcurrency/'+elem.value
         }
         document.querySelector('#myCurrency').value = '{{app.session.get('_currency')}}';
 
