--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,8 +19,7 @@
     </head>
     <body id="page-top">
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-        <!-- Bootstrap core JavaScript -->
+        {% block javascripts %}
         <script src="{{path('index')}}vendor/jquery/jquery.min.js"></script>
         <script src="{{path('index')}}vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
@@ -59,5 +58,9 @@
 
             });
         </script>
+
+        {% endblock %}
+        <!-- Bootstrap core JavaScript -->
+
     </body>
 </html>
