--- a/templates/index/checkout.html.twig
+++ b/templates/index/checkout.html.twig
@@ -39,6 +39,7 @@
 
 
     <section class="p-0" id="checkout">
+      <form action="{{path('create.order',{ 'id': gigs.id })}}">
       <div class="container-fluid">
         <div class="row justify-content-center">
           <h2>BASIC INFO</h2>
@@ -46,13 +47,13 @@
         <div class="row checkout-form">
 
           <div class="col-lg-4">
-            <input type="text" placeholder="Full Name" />
-            <input type="email" placeholder="Email" />
+            <input type="text" name="name" placeholder="Full Name" />
+            <input type="email" name="email"  placeholder="Email" />
           </div>
 
 
           <div class="col-lg-4">
-            <input type="text" placeholder="Phone Number" />
+            <input type="text" placeholder="Phone Number" name="phone" />
             <select>
               <option>Choose Your Plan</option>
               <option>Choose Your Plan</option>
@@ -63,7 +64,7 @@
 
 
           <div class="col-lg-4">
-            <textarea>
+            <textarea name="message">
               Additional Message
             </textarea>
           </div>
@@ -137,7 +138,7 @@
 
       <div class="d-flex justify-content-center">
         <div class="d-flex col-sm-10 col-lg-4 col-md-4">
-          <a class="btn"></a>
+          <button class="btn">pay pith paypal</button>
         <div>
       </div>
     </section>
