--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,28 +1,52 @@
-{% extends 'base.html.twig' %}
 
-{% block body %}
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Gigs - Login</title>
+	<link href="{{ path('index') }}admin/css/bootstrap.min.css" rel="stylesheet">
+	<link href="{{ path('index') }}admin/css/datepicker3.css" rel="stylesheet">
+	<link href="{{ path('index') }}admin/css/styles.css" rel="stylesheet">
+	<!--[if lt IE 9]>
+	<script src="{{ path('index') }}admin/js/html5shiv.js"></script>
+	<script src="{{ path('index') }}admin/js/respond.min.js"></script>
+	<![endif]-->
+</head>
+<body>
+	<div class="row">
+		<div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
+			<div class="login-panel panel panel-default">
+				<div class="panel-heading">Gigs Admin Log in</div>
+				<div class="panel-body">
+					<form role="form" action="{{ path('login') }}" method="POST">
+						<fieldset>
+							<div class="form-group">
+                <input type="text"
+                       id="_username"
+                       name="_username"
+                       class="form-control"
+                       placeholder="Username"
+                       required
+                       autofocus>
+							</div>
+							<div class="form-group">
+                <input type="password"
+                       id="_password"
+                       name="_password"
+                       class="form-control"
+                       placeholder="Password"
+                       required>
+							</div>
+							<button class="btn btn-lg btn-primary btn-block" type="submit">Login </button>
+					</form>
+				</div>
+			</div>
+		</div><!-- /.col-->
+	</div><!-- /.row -->
 
-    <form class="form-signin" action="{{ path('login') }}" method="POST">
-        <h2 class="form-signin-heading">Please sign in</h2>
 
-        <label for="_username" class="sr-only">Username</label>
-        <input type="text"
-               id="_username"
-               name="_username"
-               class="form-control"
-               placeholder="Username"
-               required
-               autofocus>
-
-        <label for="_password" class="sr-only">Password</label>
-        <input type="password"
-               id="_password"
-               name="_password"
-               class="form-control"
-               placeholder="Password"
-               required>
-
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-    </form>
-
-{% endblock %}
+<script src="{{ path('index') }}admin/js/jquery-1.11.1.min.js"></script>
+	<script src="{{ path('index') }}admin/js/bootstrap.min.js"></script>
+</body>
+</html>
