--- a/templates/admin_base.html.twig
+++ b/templates/admin_base.html.twig
@@ -47,7 +47,7 @@
 			<li class="{{class=='order'? 'active' : '' }}"><a href="{{ path('order_list') }}"><em class="fa fa-calendar">&nbsp;</em> Orders</a></li>
 			<li class="{{class=='gigs'? 'active' : '' }}"><a href="{{ path('gigs_list') }}"><em class="fa fa-bar-chart">&nbsp;</em> Gigs</a></li>
 			<li class="{{class=='category'? 'active' : '' }}"><a href="{{ path('category_list') }}"><em class="fa fa-toggle-off">&nbsp;</em>Categories</a></li>
-			<li><a href="login.html"><em class="fa fa-power-off">&nbsp;</em> Logout</a></li>
+			<li><a href="{{ path('app_security_logout') }}"><em class="fa fa-power-off">&nbsp;</em> Logout</a></li>
 		</ul>
 	</div><!--/.sidebar-->
 
