--- a/templates/index/allgigs.html.twig
+++ b/templates/index/allgigs.html.twig
@@ -74,8 +74,8 @@
           {% for featured in my_pager.currentPageResults %}
           <div class="col-lg-4 col-md-6 col-sm-12 filter filter-social-media">
             <a href="{{path('index')}gigs/{{featured.id}}" style="display:block;text-decoration: none!important;">
-              <div class="featured-bloc" style="background: url({{ vich_uploader_asset(featured, 'background') }})">
-                  <div class="featured-icon"><img src="{{ vich_uploader_asset(featured, 'icon') }}" alt="" /></div>
+              <div class="featured-bloc" style="background: url({{path('index')}}/{{ vich_uploader_asset(featured, 'background') }})">
+                  <div class="featured-icon"><img src="{{path('index')}}/{{ vich_uploader_asset(featured, 'icon') }}" alt="" /></div>
                   <p class="featured-category">{{featured.category|upper}}</p>
                   <h3>{{featured.name|upper}}</h3>
                   <p class="featured-description">{{featured.shortdescription|raw}}</p>
