default page title

--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello {{ controller_name }}!{% endblock %}
+{% block title %}Pepperweb Gigs{% endblock %}
 
 {% block body %}
     <!-- Navigation -->
