--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
         <link href="{{path('index')}}vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
         <link href="{{path('index')}}css/style.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Pepperweb Gigs{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
     </head>
     <body id="page-top">
