--- a/templates/admin_base.html.twig
+++ b/templates/admin_base.html.twig
@@ -10,12 +10,14 @@
 	<link href="{{path('index')}}admin/css/datepicker3.css" rel="stylesheet">
 	<link href="{{path('index')}}admin/css/styles.css" rel="stylesheet">
   <link href="{{path('index')}}admin/css/datatables.min.css" rel="stylesheet">
+	<link href="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.css" type="text/css" rel="stylesheet" />
 	<script src="{{path('index')}}admin/js/jquery-1.11.1.min.js"></script>
 	<script src="{{path('index')}}admin/js/datatables.min.js"></script>
 	<script src="{{path('index')}}admin/js/bootstrap.min.js"></script>
 	<script src="{{path('index')}}admin/js/bootstrap-datepicker.js"></script>
 	<script src="{{path('index')}}admin/js/custom.js"></script>
 	<script src="{{ asset('bundles/datatables/js/datatables.js') }}"></script>
+	<script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
 
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 	<!--[if lt IE 9]>
