--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -17,7 +17,7 @@
             </tr>
             <tr>
                 <th>Description</th>
-                <td>{{ category.description }}</td>
+                <td>{{ category.description|raw }}</td>
             </tr>
         </tbody>
     </table>
