--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,57 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body id="page-top">
-        {% block body %}{% endblock %}
+
+        <!-- Navigation -->
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+            <div class="container-fluid">
+                <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="{{path('index')}}img/pepperweb.png" alt="Pepperweb" /><span>pepperweb</span></a>
+                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link js-scroll-trigger" href="{{ path('all-gigs') }}">browse all gigs</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link js-scroll-trigger" href="#partner">become a partner</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link js-scroll-trigger" href="#">Contact us</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        {% block body %}
+        {% endblock %}
+
+        <footer id="footer">
+            <div class="container-fluid">
+                <div class="col-md-12 mx-auto d-flex justify-content-center">
+                    <ul class="d-flex justify-content-center p-0">
+                        <li><a href="{{path('all-gigs')}}">BROWSE ALL GIGS</a></li>
+                        <li><a href="#">BECOME A PARTNER</a></li>
+                        <li><a href="#">CONTACT US</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-12 mx-auto d-flex justify-content-center">
+                    <ul class="d-flex p-0 social-icons">
+                        <li><a href="#" target="_blank"><img src="{{path('index')}}img/footer-ico-facebook.png" alt="" /></a></li>
+                        <li><a href="#" target="_blank"><img src="{{path('index')}}img/footer-ico-twitter.png" alt="" /></a></li>
+                        <li><a href="#" target="_blank"><img src="{{path('index')}}img/footer-ico-dribble.png" alt="" /></a></li>
+                        <li><a href="#" target="_blank"><img src="{{path('index')}}img/footer-ico-vimeo.png" alt="" /></a></li>
+                        <li><a href="#" target="_blank"><img src="{{path('index')}}img/footer-ico-google.png" alt="" /></a></li>
+                    </ul>
+                </div>
+                <div class="col-md-12 mx-auto d-flex justify-content-center">
+                    <p class="copy">Pepperweb 2017 - All Rights Reserved</p>
+                </div>
+            </div>
+        </footer>
+
         {% block javascripts %}
         <script src="{{path('index')}}vendor/jquery/jquery.min.js"></script>
         <script src="{{path('index')}}vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
