--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,7 @@
         <link href="{{path('index')}}vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
         <!-- Plugin CSS -->
         <link href="{{path('index')}}vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
@@ -74,9 +75,11 @@
         <script src="{{path('index')}}vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
         <!-- Plugin JavaScript -->
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
         <script src="{{path('index')}}vendor/jquery-easing/jquery.easing.min.js"></script>
         <script src="{{path('index')}}vendor/scrollreveal/scrollreveal.min.js"></script>
         <script src="{{path('index')}}vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+
 
         <!-- Custom scripts for this template -->
         <script src="{{path('index')}}js/creative.min.js"></script>
@@ -105,7 +108,7 @@
                     $(this).removeClass("active");
                 }
                 $(this).addClass("active");
-
+                $( ".ui.form-control" ).selectmenu();
             });
         </script>
 
