--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
         <title>{% block title %}Pepperweb Gigs{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
     </head>
-    <body id="page-top">
+    <body id="page-top" class="{{body_class | default("")}}">
 
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
