--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,10 +33,10 @@
                             <a class="nav-link js-scroll-trigger" href="{{ path('all-gigs') }}">browse all gigs</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link js-scroll-trigger" href="#partner">become a partner</a>
+                            <a class="nav-link js-scroll-trigger" href="{{ path('index') }}become-partner">become a partner</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link js-scroll-trigger" href="#">Contact us</a>
+                            <a class="nav-link js-scroll-trigger" href="{{ path('index') }}contact-us">Contact us</a>
                         </li>
                     </ul>
                 </div>
@@ -51,8 +51,8 @@
                 <div class="col-md-12 mx-auto d-flex justify-content-center">
                     <ul class="d-flex justify-content-center p-0">
                         <li><a href="{{path('all-gigs')}}">BROWSE ALL GIGS</a></li>
-                        <li><a href="#">BECOME A PARTNER</a></li>
-                        <li><a href="#">CONTACT US</a></li>
+                        <li><a href="{{ path('index') }}become-partner">BECOME A PARTNER</a></li>
+                        <li><a href="{{ path('index') }}contact-us">CONTACT US</a></li>
                     </ul>
                 </div>
                 <div class="col-md-12 mx-auto d-flex justify-content-center">
